Move exchange wallets to subpackage and rename wallets sidebar menu position to balances It's preparation to add more views in Balances view

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,8 +8,8 @@
             <i class="fa fa-fw fa-key"></i>&nbsp;{{ 'API keys' | translate }}
         </a>
 
-        <a routerLink="/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
+        <a routerLink="/balances/exchange" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Balances' | translate }}
         </a>
 
         <a routerLink="/arbitrage-monitor" [routerLinkActive]="['router-link-active']" class="list-group-item">
