--- a/src/app/layout/balances/balances.component.html
+++ b/src/app/layout/balances/balances.component.html
@@ -1,11 +1,38 @@
 <div class="row">
     <div class="col-12">
         <div class="btn-group mb-1" role="group">
-            <button type="button" class="btn btn-outline-secondary">Wallets (not available yet)</button>
-            <button type="button" class="btn btn-outline-secondary">Coins (not available yet)</button>
-            <button type="button" class="btn btn-primary">Exchanges</button>
-            <button type="button" class="btn btn-outline-secondary">Summary (not available yet)</button>
+            <button (click)="selectView(walletsView)"
+                    type="button"
+                    [class.btn-primary]="selectedView == walletsView"
+                    [class.btn-outline-secondary]="selectedView != walletsView"
+                    class="btn">
+                Wallets
+            </button>
+            <button (click)="selectView(coinsView)"
+                    type="button"
+                    disabled
+                    [class.btn-primary]="selectedView == coinsView"
+                    [class.btn-outline-secondary]="selectedView != coinsView"
+                    class="btn">
+                Coins (not available yet)
+            </button>
+            <button (click)="selectView(exchangesView)"
+                    type="button"
+                    [class.btn-primary]="selectedView == exchangesView"
+                    [class.btn-outline-secondary]="selectedView != exchangesView"
+                    class="btn">
+                Exchanges
+            </button>
+            <button (click)="selectView(summaryView)"
+                    type="button"
+                    disabled
+                    [class.btn-primary]="selectedView == summaryView"
+                    [class.btn-outline-secondary]="selectedView != summaryView"
+                    class="btn">
+                Summary (not available yet)
+            </button>
         </div>
     </div>
 </div>
-<app-exchange-wallets></app-exchange-wallets>
+<app-exchange-balance *ngIf="selectedView == exchangesView"></app-exchange-balance>
+<app-blockchain-wallet-balance *ngIf="selectedView == walletsView"></app-blockchain-wallet-balance>
