--- a/src/app/layout/balances/exchange-balance/exchange-balance.component.html
+++ b/src/app/layout/balances/exchange-balance/exchange-balance.component.html
@@ -1,3 +1,4 @@
+<app-balances-menu></app-balances-menu>
 <div class="row">
     <div class="col-12">
         <h5>View balance from many exchanges in one place</h5>
