--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
             <i class="fa fa-fw fa-key"></i>&nbsp;{{ 'API keys' | translate }}
         </a>
 
-        <a routerLink="/balances" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a routerLink="/balances/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Balances' | translate }}
         </a>
 
