--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -4,85 +4,11 @@
     <div class="col-12">
         <h5>Wallets</h5>
         <div class="card mb-3">
-            <div (click)="toggleAddWalletsVisibility()" class="card-header collapsable-header">
-                <span>
-                    <button class="btn btn-primary btn-sm">
-                        <i *ngIf="isAddWalletCardVisible" class="fa fa-angle-double-up"></i>
-                        <i *ngIf="!isAddWalletCardVisible" class="fa fa-angle-double-down"></i>
-                    </button>
-                    New wallets to track
-                </span>
-            </div>
-            <div class="card-body"
-                 [class.pt-0]="!isAddWalletCardVisible"
-                 [class.pb-0]="!isAddWalletCardVisible"
-                 [@addWalletAnimation]="addWalletCardVisibility">
-                <form role="form">
-                    <div class="form-content">
-                        <div class="form-group">
-                            <label for="currencySelector">Currency</label>
-                            <input type="text"
-                                   class="form-control"
-                                   name="currencyInput"
-                                   [(ngModel)]="currencyInput"
-                                   disabled
-                                   id="currencySelector">
-                        </div>
-                        <div class="form-group">
-                            <button (click)="toggleAddSingleWalletForm()" class="btn btn-sm mr-1 mb-1" type="button">
-                                Add multiple wallets
-                                <i class="fa" [class.fa-toggle-on]="isAddingMultipleWallets"
-                                   [class.fa-toggle-off]="!isAddingMultipleWallets"></i>
-                            </button>
-                        </div>
-                        <div *ngIf="isAddingMultipleWallets" class="form-group">
-                            <label for="walletsCsvInput">Public wallet addresses</label>
-                            <textarea class="form-control wallet-address"
-                                      [(ngModel)]="walletsCsvInput"
-                                      name="walletsCsvInput"
-                                      id="walletsCsvInput"
-                                      aria-describedby="walletsCsvInputHelp"></textarea>
-                            <small id="walletsCsvInputHelp" class="form-text text-muted">
-                                One wallet address per line with optional description after coma, e.g. '0x445c9d791b782a7b181194950e0c0ee8c14468f1,savings'
-                            </small>
-                        </div>
-                        <ng-container *ngIf="!isAddingMultipleWallets">
-                            <div class="form-group">
-                                <label for="walletAddressInput">Public wallet address</label>
-                                <input type="text" class="form-control"
-                                       [(ngModel)]="walletAddressInput"
-                                       id="walletAddressInput"
-                                       name="walletAddressInput"
-                                       aria-describedby="walletAddressInputHelp">
-                                <small id="walletAddressInputHelp" class="form-text text-muted">
-                                    e.g. '0x445c9d791b782a7b181194950e0c0ee8c14468f1'
-                                </small>
-                            </div>
-                            <div class="form-group">
-                                <label for="walletAddressDescriptionInput">Description</label>
-                                <input type="text" class="form-control"
-                                       [(ngModel)]="walletAddressDescriptionInput"
-                                       id="walletAddressDescriptionInput"
-                                       name="walletAddressDescriptionInput"
-                                       aria-describedby="walletAddressDescriptionInputHelp">
-                                <small id="walletAddressDescriptionInputHelp" class="form-text text-muted">Optional, e.g. 'savings'</small>
-                            </div>
-                        </ng-container>
-
-                        <div *ngIf="invalidWallets.length > 0" class="form-group">
-                            All addresses were added apart from the following, invalid ones:
-                            <ul>
-                                <li *ngFor="let invalidWallet of invalidWallets">{{invalidWallet}}</li>
-                            </ul>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-success" (click)="addWallets()" [disabled]="!areAddWalletsInputValid()">
-                                <span *ngIf="isAddingMultipleWallets">Add wallets</span>
-                                <span *ngIf="!isAddingMultipleWallets">Add wallet</span>
-                            </button>
-                        </div>
-                    </div>
-                </form>
+            <div (click)="goToAddNewWalletView()" class="card-header wallet-add-header">
+                <button class="btn btn-primary btn-sm">
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </button>
+                New wallets to track
             </div>
         </div>
         <div class="card">
