--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -29,6 +29,7 @@
                             <th scope="col">Wallet</th>
                             <th scope="col">Description</th>
                             <th scope="col">Balance</th>
+                            <th scope="col">USD value</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -61,6 +62,9 @@
                             </td>
                             <td>
                                 {{wallet.balance}}
+                            </td>
+                            <td>
+                                {{wallet.usdBalance | number : '1.2'}}
                             </td>
                         </tr>
                         </tbody>
