Add possibility to add BTC wallets in wallets view

--- a/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
+++ b/src/app/layout/balances/blockchain-wallet-balance/blockchain-wallet-balance.component.html
@@ -33,10 +33,10 @@
                                 {{currencyBalance.currency}}
                             </th>
                             <td>
-                                {{currencyBalance.balance}}
+                                {{currencyBalance.balance }}
                             </td>
                             <td>
-                                {{currencyBalance.usdBalance}}
+                                {{currencyBalance.usdBalance | number : '1.2'}}
                             </td>
                         </tr>
                         </tbody>
