Cleanup exchange related dtos

--- a/src/app/layout/api-keys/exchange-user-edit/exchange-user-edit.component.html
+++ b/src/app/layout/api-keys/exchange-user-edit/exchange-user-edit.component.html
@@ -35,7 +35,7 @@
                         <ng-template ngbPanelContent>
 
                             <div ngModelGroup="exchangesKeys" class="exchange-field">
-                                <button (click)="deleteExchangeKey(exchange.id)" class="btn btn-danger btn-sm">
+                                <button (click)="deleteExchangeKey(exchange)" class="btn btn-danger btn-sm">
                                     Delete
                                 </button>
 
